Bug 484688 - With 'double-click to open', double-clicking the expand arrow in the details view opens the directory
Summary: With 'double-click to open', double-clicking the expand arrow in the details ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 24.02.1
Platform: NixOS Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-28 23:34 UTC by Katalin Rebhan
Modified: 2024-04-04 21:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katalin Rebhan 2024-03-28 23:34:30 UTC
SUMMARY
Double-clicking the expand arrow to the left of the directory name opens the directory instead of expanding and collapsing the directory. I would expect this to always treat it as the latter as it does in 'single-click to open' mode so that it is still possible to quickly expand and collapse a directory with the mouse (for example, if you misclicked or wanted to take a quick look at the contents).

STEPS TO REPRODUCE
1. Enable 'double-click to open files'
2. Click on the expand button in details view in Dolphin

OBSERVED RESULT
Dolphin opens the directory as if you double-clicked on the file name.

EXPECTED RESULT
Dolphin expands and collapses the directory.

SOFTWARE/OS VERSIONS
Operating System: NixOS 24.05
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Kernel Version: 6.6.22 (64-bit)
Graphics Platform: Wayland
Processors: 24 × 13th Gen Intel® Core™ i7-13700F
Memory: 62.7 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-03-30 12:20:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/755
Comment 2 Méven 2024-04-04 07:50:21 UTC
Git commit 95e88ff1fcfa475b47ad9274ef65a12e49b20f20 by Méven Car.
Committed on 04/04/2024 at 07:44.
Pushed by meven into branch 'master'.

kitemlist: don't open dir when double-click on expand arrow

M  +5    -2    src/kitemviews/kitemlistcontroller.cpp

https://invent.kde.org/system/dolphin/-/commit/95e88ff1fcfa475b47ad9274ef65a12e49b20f20