kitemlist: don't open dir when double-click on expand arrow

BUG: 484688